Update sal-distributed-datastore tests a bit
Use MockitoJUnitRunner and clean up imports/mocking a bit.

Change-Id: I854f95e37e503d28903c8aa83aecafdef4c4c1fa
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>